# datem

./: .gitignore  Cargo.toml  README.md
.github/workflows/: web.yml
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/billing/: aggregator.rs  engine.rs  mod.rs  pricer.rs  stripe.rs
core/src/db/: actor.rs  mod.rs  store.rs
core/src/db/tables/: billing_runs.rs  charges.rs  customers.rs  events.rs  invoice_line_items.rs  invoices.rs  metrics.rs  mod.rs  plans.rs  subscriptions.rs  tiers.rs
core/src/stripe/: client.rs  mod.rs  webhooks.rs
docs/: api.md  billing-integration.md
lambda/: Cargo.toml  Dockerfile
lambda/src/: billing.rs  billing_main.rs  ingest.rs  ingest_main.rs
sample/: README.md
sample/infra/: ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  sqs.tf  ssm.tf  variables.tf
scripts/: benchmark-db.sh  seed.sh  stress.sh
server/: Cargo.toml  Dockerfile
server/src/: dashboard.html  main.rs
server/src/api/: auth.rs  billing_runs.rs  customers.rs  dashboard.rs  error.rs  ingest.rs  invoices.rs  metrics.rs  mod.rs  plans.rs  query.rs  router.rs  stats.rs  subscriptions.rs  webhooks.rs
www/: astro.config.mjs  index.html  package-lock.json  package.json
www/src/components/: AnnouncementBar.astro  Footer.astro  Logo.astro  Nav.astro
www/src/content/docs/docs/: api.md  billing-integration.md  index.md
www/src/layouts/: Layout.astro
www/src/pages/: index.astro
www/src/styles/: starlight-custom.css  tokens.css
