[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datem-ingest"
path = "src/ingest_main.rs"

[[bin]]
name = "datem-billing"
path = "src/billing_main.rs"

[dependencies]
datem-core = { path = "../core" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

lambda_runtime = "0.13"
aws_lambda_events = { version = "0.15", default-features = false, features = ["sqs", "eventbridge"] }
once_cell = "1"
