[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datem"
path = "src/main.rs"

[dependencies]
datem-core = { path = "../core" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }

ulid = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tokio-cron-scheduler = "0.13"
